<resources>
    <string name="app_name">AndroidCourseProject</string>
    <string name="title_clients">Clients</string>
    <string name="title_livings_and_bookings">Livings and Bookings</string>
    <string name="title_apartments">Apartments</string>

    <string name="clients_goToLivings_buttonTitle">Move to livings</string>
    <string name="clients_goToBookings_buttonTitle">Move to bookings</string>
    <string name="clients_editClient_buttonTitle">Change chosen client\'s data</string>
    <string name="clients_deleteClient_buttonTitle">Delete chosen client\'s data</string>
    <string name="clients_registerNewClient_buttonTitle">Register</string>

    <string name="bookings_goToClient_buttonTitle">Move to client</string>
    <string name="bookings_editEntry_buttonTitle">Change chosen booking</string>
    <string name="bookings_deleteEntry_buttonTitle">Delete chosen booking</string>

    <string name="livings_goToClient_buttonTitle">Move to client</string>
    <string name="livings_editEntry_buttonTitle">Change chosen living</string>
    <string name="livings_deleteEntry_buttonTitle">Delete chosen living</string>
    <string name="livings_showAdditionalServices_buttonTitle">Show additional services info</string>

    <string name="apartments_editApartment_buttonTitle">Change chosen apartment info</string>
    <string name="apartments_deleteApartment_buttonTitle">Delete chosen apartment</string>
    <string name="apartments_addNewApartment_buttonTitle">Add new apartment</string>
    <string name="apartments_showPhotos_buttonTitle">Show photos</string>

    <string name="client_passport_series">Passport series</string>
    <string name="client_passport_number">Passport number</string>
    <string name="client_name">Name</string>
    <string name="client_surname">Surname</string>
    <string name="client_patronymic">Patronymic</string>
    <string name="client_birthday">Birthday</string>
    <string name="client_telephone">Telephone</string>
    <string name="living_valueOfGuests">Guests</string>
    <string name="living_valueOfKids">Kids</string>

    <string name="newClient_birthdayPick_buttonTitle">Choose birthday date</string>
    <string name="newClient_noDate_dateTextView">No date chosen</string>
    <string name="newClient_next_buttonTitle">Next</string>
    <string name="newClient_settlingPick_buttonTitle">Choose settling date</string>
    <string name="newClient_evictionPick_buttonTitle">Choose eviction date</string>
    <string name="newClient_finishLivingRegistration_buttonTitle">Register living</string>
    <string name="newClient_finishBookingRegistration_buttonTitle">Register booking</string>
    <string name="newClient_bottomPrice">Bottom price</string>
    <string name="newClient_topPrice">Top price</string>

    <string name="deleteTextView">Delete this entry?</string>

    <string name="additional_services_miniBarTextView">Mini bar</string>
    <string name="additional_services_clothesWashingTextView">Clothes washing</string>
    <string name="additional_services_telephoneTextView">Telephone</string>
    <string name="additional_services_intercityTelephoneTextView">Intercity telephone</string>
    <string name="additional_services_foodTextView">Food</string>

    <string name="discount_setting">Discount</string>

    <string name="photos_delete_buttonTitle">Delete photo</string>
    <string name="photos_add_buttonTitle">Add photo</string>

    <string name="apartments_numberTextView">Number</string>
    <string name="apartments_typeTextView">Type</string>
    <string name="apartments_priceTextView">Price</string>

    <string name="toasts_EntryIsNotSelected">Entry is not selected</string>
    <string name="toasts_ChangesAborted">Changes aborted</string>
    <string name="toasts_EntrySuccessfullyDeleted">Entry Successfully Deleted</string>
    <string name="toasts_EntrySuccessfullyUpdated">Entry Successfully Updated</string>
    <string name="toasts_EntrySuccessfullyAdded">Entry Successfully Added</string>
    <string name="toasts_InvalidDataInput">Invalid Data Input</string>
    <string name="toasts_AllDataFieldsAreRequired">All Data Fields Are Required</string>
    <string name="toasts_ApartmentsWithSuchNumberAlreadyAdded">Apartments With Such Number Already Added</string>
    <string name="toasts_ClientWithSuchPassportDataAlreadyAdded">Client With Such Passport Data Already Added</string>
</resources>