<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/tvEditPassportSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_passport_series" />

    <EditText
        android:id="@+id/tvEditPassportNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_passport_number" />

    <EditText
        android:id="@+id/tvEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_name" />

    <EditText
        android:id="@+id/tvEditSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_surname" />

    <EditText
        android:id="@+id/tvEditPatronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_patronymic" />

    <EditText
        android:id="@+id/tvEditBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_birthday" />

    <EditText
        android:id="@+id/etEditTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_telephone" />

</LinearLayout>