<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.apartments.RegisterClientApartmentPicker">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/apartments_List"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomPriceEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setSettlingDateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/newClient_settlingPick_buttonTitle"
        app:layout_constraintBottom_toTopOf="@+id/tvSettlingDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setEvictionDateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/newClient_evictionPick_buttonTitle"
        app:layout_constraintBottom_toTopOf="@+id/tvEvictionDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSettlingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newClient_noDate_dateTextView"
        app:layout_constraintBottom_toTopOf="@+id/setEvictionDateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEvictionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newClient_noDate_dateTextView"
        app:layout_constraintBottom_toTopOf="@+id/registerNewLivingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerNewLivingButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/newClient_finishLivingRegistration_buttonTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerNewBookingButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerNewBookingButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/newClient_finishBookingRegistration_buttonTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registerNewLivingButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/bottomPriceEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newClient_bottomPrice"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/setSettlingDateButton"
        app:layout_constraintEnd_toStartOf="@+id/topPriceEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/topPriceEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newClient_topPrice"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/setSettlingDateButton"
        app:layout_constraintStart_toEndOf="@+id/bottomPriceEditText"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>