<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.apartments.ApartmentsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/apartments_List"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/showPhotosButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editApartmentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apartments_editApartment_buttonTitle"
        app:layout_constraintBottom_toTopOf="@id/deleteApartmentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteApartmentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apartments_deleteApartment_buttonTitle"
        app:layout_constraintBottom_toTopOf="@id/addNewApartmentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addNewApartmentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apartments_addNewApartment_buttonTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/showPhotosButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apartments_showPhotos_buttonTitle"
        app:layout_constraintBottom_toTopOf="@+id/editApartmentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>