<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/miniBarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_services_miniBarTextView" />

        <EditText
            android:id="@+id/etEditMiniBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_services_miniBarTextView" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/clothesWashingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_services_clothesWashingTextView" />

        <EditText
            android:id="@+id/etEditClothesWashing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_services_clothesWashingTextView" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/telephoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_services_telephoneTextView" />

        <EditText
            android:id="@+id/etEditTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_services_telephoneTextView" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/intercityTelephoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_services_intercityTelephoneTextView" />

        <EditText
            android:id="@+id/etEditIntercityTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_services_intercityTelephoneTextView" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/foodTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_services_foodTextView" />

        <EditText
            android:id="@+id/etEditFood"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:hint="@string/additional_services_foodTextView" />
    </TableRow>
</TableLayout>