<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/livings_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/goToClientButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goToClientButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/livings_goToClient_buttonTitle"
        app:layout_constraintBottom_toTopOf="@+id/deleteEntryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/showAdditionalServicesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/livings_showAdditionalServices_buttonTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteEntryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/livings_deleteEntry_buttonTitle"
        app:layout_constraintBottom_toTopOf="@+id/showAdditionalServicesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>